--- a/app/src/main/res/layout/cafe.xml
+++ b/app/src/main/res/layout/cafe.xml
@@ -2,70 +2,108 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    >
+    android:orientation="vertical">
 
-    <LinearLayout
+    <ScrollView
+        android:id="@+id/menuView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="2"
+        android:layout_weight="3"
+        android:background="#843939"
+        >
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:background="#843939">
+        >
         <TextView
+            android:id="@+id/menuHead"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="MENU"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="20dp"
+            android:fontFamily="@font/bitbit"
             android:textColor="@color/white"
             android:gravity="center_horizontal"
-            android:textSize="80sp"/>
-        <TextView
+            android:textSize="60sp"/>
+        <View
+            android:id="@+id/menuLine"
+            android:layout_width="match_parent"
+            android:layout_marginStart="40dp"
+            android:layout_marginEnd="40dp"
+            android:layout_marginBottom="20dp"
+            android:layout_height="3dp"
+            android:background="#ffffff"/>
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:text="COFFEE  ----------------------"
-            android:textColor="@color/white"
-            android:textSize="40sp" />
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:text="DESSERT  --------------------"
-            android:textColor="@color/white"
-            android:textSize="40sp" />
-    </LinearLayout>
+            android:orientation="horizontal">
+            <LinearLayout
+                android:id="@+id/menu1"
+                android:gravity="center"
+                android:layout_weight="1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+            </LinearLayout>
 
+        </LinearLayout>
+    </LinearLayout>
+    </ScrollView>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:layout_weight="8">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:textColor="@color/black"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            android:text="주문 내역"/>
+        android:layout_weight="7">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text=""
-
-                />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text=""
-
-                />
+            android:gravity="center"
+            android:layout_marginBottom="10dp">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginEnd="20dp"
+            android:textColor="@color/black"
+            android:textSize="23sp"
+            android:fontFamily="@font/bitbit"
+            android:text="주문 내역"/>
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/orderbtn"
+            android:layout_width="50dp"
+            android:layout_height="20dp"
+            android:layout_marginStart="20dp"
+            android:paddingTop="2dp"
+            android:layout_gravity="center"
+            android:background="@drawable/ordermsg"
+            android:fontFamily="@font/bitbit"
+            android:textSize="15sp"
+            android:text="주문" />
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/addorderbtn"
+                android:layout_width="80dp"
+                android:layout_height="20dp"
+                android:layout_marginStart="20dp"
+                android:paddingTop="2dp"
+                android:layout_gravity="center"
+                android:background="@drawable/ordermsg"
+                android:fontFamily="@font/bitbit"
+                android:textSize="15sp"
+                android:text="추가 주문" />
         </LinearLayout>
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+        <LinearLayout
+            android:id="@+id/orderResult"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+        </LinearLayout>
+        </ScrollView>
     </LinearLayout>
 </LinearLayout>
